<resources>
    <string name="app_name">Spaceshooter</string>
    <string name="start_button_text">Start</string>
    <string name="highscore_title">Highscore:</string>
    <string name="highscore_placeholder">highscore</string>
    <string name="difficulty_text">Difficulty:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="game_set_easy">Game is now set to easy difficulty</string>
    <string name="game_set_normal">Game is now set to normal difficulty</string>
    <string name="game_set_hard">Game is now set to hard difficulty</string>
    <string name="easy_highscorelist">"Easy: %d km"</string>
    <string name="normal_highscorelist">"Normal: %d km"</string>
    <string name="hard_highscorelist">"Hard: %d km"</string>
    <string name="difficulty_hud">"Difficulty: "</string>
    <string name="health_hud">"Health: "</string>
    <string name="distance_hud">"Distance: "</string>
    <string name="game_over_hud">Game Over!</string>
    <string name="game_over_restart_hud">(press to restart)</string>
    <string name="start_screen_hud">Tap the screen to start flying!</string>
</resources>